test/compile_errors/err_operator_neg_unsigned.w
//! expect-check-fail: cannot negate an unsigned value

fn main:
    let x: u32 = 1
    let _ = -x
